<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/gradient_test">


    <TextView
        android:id="@+id/dshbrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/dashboard"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/popis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:text="@string/popis_dshboard"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dshbrd"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btn_vysledok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="16dp"
        android:text="@string/pozri_vysledky"
        android:textSize="10sp"
        android:background="@drawable/glassmorphism"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popis"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/btn_trening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zacni_trening"
        android:layout_marginLeft="16dp"
        android:background="@drawable/glassmorphism"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popis"
        app:layout_constraintVertical_bias="0.345" />


</androidx.constraintlayout.widget.ConstraintLayout>